--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "lottie-react": "^2.4.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.0",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
