--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.1.1",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "lottie-react": "^2.4.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
@@ -19,9 +22,12 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.25.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
