--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GENERATE_SOURCEMAP=false
+VITE_API_URL="https://boezangapi.hkks.shop/api/v1"
+VITE_API_URL_LOCAL="http://localhost:5001/api/v1"
+NODE_ENV=production
