--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^5.1.1",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
