--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tinymce/tinymce-react": "^5.1.1",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
