--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@vercel/speed-insights": "^1.0.12",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.0",
     "react-quill": "^2.0.0",
@@ -31,6 +35,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
   },
