--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dompurify": "^3.1.6",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
