--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dompurify": "^3.1.6",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
