--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns-tz": "^3.1.3",
     "dompurify": "^3.1.6",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
