--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dompurify": "^3.1.6",
+    "framer-motion": "^11.3.19",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "lottie-react": "^2.4.0",
